k8/gitops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rest-api
  labels:
    argocd.argoproj.io/managed-by: rhdh-gitops
