k8/gitops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rest-api
    app.kubernetes.io/component: rest-api
    app.kubernetes.io/instance: rest-api
    app.kubernetes.io/name: rest-api
    app.kubernetes.io/part-of: rest-api
    backstage.io/kubernetes-id: rest-api
  name: rest-api
  namespace: rest-api
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rest-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rest-api
        deployment: rest-api
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/rest-api/rest-api@sha256:c1b4bbfc45a7bba3dcbdd5494f5e61b8a67a1f12f8037b0bc210e8189f839ab1
        imagePullPolicy: Always
        name: rest-api
        ports:
        - containerPort: 8000
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
