k8/gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rest-api
    app.kubernetes.io/component: rest-api
    app.kubernetes.io/instance: rest-api
    app.kubernetes.io/name: rest-api
    app.kubernetes.io/part-of: rest-api
    backstage.io/kubernetes-id: rest-api
  name: rest-api
  namespace: rest-api
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8000-tcp
    port: 8000
  selector:
    app: rest-api
    deployment: rest-api
