k8/gitops/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: rest-api
    app.kubernetes.io/component: rest-api
    app.kubernetes.io/instance: rest-api
    app.kubernetes.io/name: rest-api
    app.kubernetes.io/part-of: rest-api
    backstage.io/kubernetes-id: rest-api
  name: rest-api
  namespace: rest-api
spec:
  port:
    targetPort: 8000-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rest-api
    weight: 100
  wildcardPolicy: None
